--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "pages:dev": "wrangler pages dev --proxy 5173 --compatibility-date=2024-04-03"
+    "pages:dev": "wrangler pages dev --proxy 5173 --compatibility-date=2024-04-03",
+    "deploy": "npm run build && wrangler pages deploy dist"
   },
   "dependencies": {
     "axios": "^1.13.4",
