feat: 新增群组支持与UI全面升级
- 新增邀请码系统，支持多群组独立抽奖
- 重构API后端，实现基于群组的抽奖逻辑
- 引入全局模态框组件(useModal)提升交互体验
- 全面升级UI设计，采用现代化视觉风格
- 更新登录、注册、个人资料页面设计
- 优化数据库绑定配置(wrangler.toml)
- 新增用户管理和邀请码管理接口

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,7 +2,7 @@ name = "giftflow"
 pages_build_output_dir = "dist"
 
 [[d1_databases]]
-binding = "giftflow"
+binding = "DB"
 database_name = "giftflow"
-database_id = "914e3f49-bc46-4458-bd8d-00faea64e354" # This will be filled after creation or used locally
+database_id = "914e3f49-bc46-4458-bd8d-00faea64e354"
 migrations_dir = "migrations"
